# cpp2cxx

./: .gitignore  BuildScheme.h  CMakeLists.txt  CondParser.cpp  CondParser.h  ConfigScheme.cpp  ConfigScheme.h  DemacBoostWaveIncludes.h  DemacroficationScheme.h  Demacrofier.cpp  Demacrofier.h  DepAnalyzer.h  DepGraph.cpp  DepGraph.h  ExceptionHandler.h  FileManager.cpp  FileManager.h  FileManagerScheme.h  HeaderDependencyBuild.cpp  LICENCE  Macro.cpp  Macro.h  MacroScopeClassifier.h  MacroStat.cpp  MacroStat.h  MainFinalize.cpp  MainSuggest.cpp  Overseer.cpp  Overseer.h  Parser.cpp  Parser.h  README.md  ReplacementList.cpp  ReplacementList.h  RlCategory.cpp  RlCategory.h  RlParser.cpp  RlParser.h  SCREENCAST  Tuple3_t.h  (+5 more)
ClangInterface/: ASTConsumer.cpp  ASTConsumer.hpp  CMakeLists.txt  FunctionInfo.h  TrackMacro.cpp  TrackMacro.hpp
dummy_test/: CMakeLists.txt  ConfigFile.cfg  Defined.h  example.cpp  header1.h
dummy_test/demac_backup/: header2.h
dummy_test/demac_cleanup/: demacrofied_macro_stat.yaml  example.cpp  header1.h  header2.h  log.yaml  macro_stat.yaml
dummy_test/dm_dir/: demacrofied_macro_stat.yaml  example.cpp  header1.h  header2.h  log.yaml  macro_stat.yaml
general_utilities/: CMakeLists.txt  SortFunctors.h  algorithm.hpp  complex_utils.hpp  debug.cpp  debug.h  file_type.hpp  list_utils.hpp  map_utils.hpp  print_typename.hpp  set_utils.hpp  sizeof.hpp  string_utils.hpp  vector_utils.hpp
general_utilities/test/: CMakeLists.txt  test_sizeof.cpp  testprint_typename.cpp
test/: example.cpp  inline-algorithm.cpp  inline-function.cpp  test2.cpp  testAccessOp.cpp  testArrayOp.cpp  testCComment.cpp  testCPPComment.cpp  testConditionBlock.cpp  testConditionals.cpp  testFunctionLike.cpp  testLambdaFunction.cpp  testMacroWithinFunction.cpp  testMultipleStatements.cpp  testNestedMacroUseCase.cpp  testNonDemacrofiableFunctionLike.cpp  testNonDemacrofiableObjectLike.cpp  testObjLikeStatement.cpp  testOutOfOrderMacro.cpp  testPCP3Macro.cpp  testPointerType.cpp  testStringTypeMacro.cpp  testStringification.cpp  testUnclosedBrace.cpp  testVariadic.cpp  testVariadicMacros.cpp  testVoidFunction.cpp  testconstexpr.cpp
